--- a/.golangci.yml
+++ b/.golangci.yml
@@ -43,6 +43,7 @@ linters-settings:
     sections:
       - standard
       - default
+      - prefix(github.com/acrlabs/prom2parquet)
       - blank
       - dot
 
