--- a/k8s/pyproject.toml
+++ b/k8s/pyproject.toml
@@ -1,13 +1,11 @@
 [tool.poetry]
-name = "manifests"
-version = "0.1.0"
-description = ""
 authors = ["David Morrison <drmorr@appliedcomputing.io>"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
 cdk8s = "^2"
-fireconfig = { git = "https://github.com/acrlabs/fireconfig", tag = "v0.5.1" }
+fireconfig = { git = "https://github.com/acrlabs/fireconfig", tag = "v0.5.4" }
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1"
