--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,16 @@
 ---
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: "https://github.com/pre-commit/pre-commit-hooks"
     rev: v4.4.0
     hooks:
       - id: end-of-file-fixer
-      - id: check-yaml
-        args: ["--allow-multiple-documents"]
       - id: trailing-whitespace
-  - repo: https://github.com/golangci/golangci-lint
+  - repo: "https://github.com/adrienverge/yamllint"
+    rev: v1.35.1
+    hooks:
+      - id: yamllint
+        args: ['--strict']
+  - repo: "https://github.com/golangci/golangci-lint"
     rev: v1.55.2
     hooks:
       - id: golangci-lint
